# nvidia-ckg

./: BENCHMARK.md  README.md  mcp_server.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
demos/: ckg_nim_demo.py
scripts/: eval_runner.py
skills/nvidia-ckg-skill/: SKILL.md  domain-traversal.md  query-guide.md  research-brief.md
skills/nvidia-ckg-skill/evals/: evals.json
skills/nvidia-ckg-skill/scripts/: _parse.py  list_domains.py  load_domain.py  query_ckg.py  search_concepts.py
tests/: test_skill.py
