[project]
name = "nvidia-ckg"
version = "0.1.0"
description = "NVIDIA CKG Plugin — structured knowledge graph traversal for AI agents"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
